--- a/login.html
+++ b/login.html
@@ -2,10 +2,9 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Myapp</title>
+    <title></title>
   </head>
   <body>
-    <p>Git Crash Course/Tutorial for Beginners!</p>
-    <p>Login Form</p>
+    <p>Login</p>
   </body>
 </html>
